Version 2.1.6 (2015-08-01):

Version 2.1.4 (2010-05-21):
	* Use guile-config to get library, include-file locations.
	* Use mysql_config to get library, include-file locations.

Version 2.1.3: 2009-12-06:
	* Update libtool usage.

2008-11-23 Linas Vepstas <linasvepstas@gmail.com>
	* Remove deprecated SCM_INUM functions.
	* DBD-VERSION 2.1.2

2008-11-10 Linas Vepstas <linasvepstas@gmail.com>
	* DBD-VERSION 2.1.1
	* Fix mis-conversion of float, double values.
	* Fix crash in garbage collection during database close.
	* Remove deprecated guile gh_ API functions.

2006-09-26  Maurizio Boriani  <baux@gnu.org>

	* NEWS: Announce new release.
	* DBD-VERSION: Bump up version.
	* Fix api to guile 1.8

2005-03-22  Maurizio Boriani  <baux@gnu.org>

	* NEWS: Announce new release.
	* DBD-VERSION: Bump up version.
	* README: Add connection string format explanation.
	* Implement automatic reconnection after a db server failure
	  (ex. broken socket, network down etc...). The number
	  of reconnection attempt is set by an optional parameter
	  in the connection string, if omitted no attempt is done.
	* Add connection string format in the README file.

2005-03-21  Maurizio Boriani  <baux@gnu.org>

	* NEWS: Announce new release.
	* DBD-VERSION: Bump up version.
	* Fixed a bug in connection handling (open/close).

2005-03-04  Maurizio Boriani  <baux@gnu.org>

	* NEWS: Announce new release.
	* DBD-VERSION: Bump up version.
	* Fixed a bug in connection string parsing.

2005-01-11  Maurizio Boriani  <baux@member.fsf.org>

	* Init my 1.0 revision.

2005-02-04  Maurizio Boriani  <baux@member.fsf.org>

	* Makefile.am: Assign copyright to FSF.
	* NEWS: Add info for 1.0.1 release.
	* README: Add info.
	* configure.ac: Assign copyright to FSF.
	Check for mysqlclient lib.
	* DBD-VERSION: Upgrade to release 1.0.1
	* TODO: Update.
	* Assign copyright to FSF.

2005-01-14  Maurizio Boriani  <baux@member.fsf.org>

	* Makefile.am: Forgotten DBI-VERSION as extra dist file.